--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -2,9 +2,10 @@
   "navigation": {
     "dashboard": "Dashboard",
     "partners": "Partners",
+    "services": "Services",
     "users": "Users",
     "invitations": "Invitations",
-    "customers": "Customers",
+    "customers": "Customers", 
     "settings": "Settings",
     "partnerInfo": "Partner Info",
     "teamMembers": "Team Members",
@@ -79,7 +80,22 @@
     "locationsFor": "Locations for",
     "noLocationsFound": "No locations found for this partner",
     "addFirstLocation": "Add First Location",
-    "viewLocations": "View Locations"
+    "viewLocations": "View Locations",
+    "basicInformation": "Basic Information",
+    "availableResources": "Available Resources",
+    "addResource": "Add Resource",
+    "resourceType": "Resource Type",
+    "resourceName": "Resource Name",
+    "quantity": "Quantity",
+    "description": "Description",
+    "scrivania": "Desk",
+    "salaRiunioni": "Meeting Room",
+    "available": "available",
+    "totalResources": "Total Resources",
+    "noResourcesFound": "No resources defined for this location",
+    "resourceExamples": "Resource Examples",
+    "scrivaniaSexamples": "Hot Desks, Dedicated Desks, Private Offices",
+    "salaRiunioniExamples": "Small Meeting Room, Conference Room, Phone Booth"
   },
   "auth": {
     "signIn": "Sign In",
@@ -236,7 +252,11 @@
     "locationDeletedSuccessfully": "Location deleted successfully",
     "errorSavingLocation": "Error saving location",
     "errorDeletingLocation": "Error deleting location",
+    "errorLoadingLocations": "Error loading locations",
     "confirmDeleteLocation": "Are you sure you want to delete this location?",
+    "locationNameRequired": "Location name is required",
+    "resourceNameRequired": "Resource name is required for resource {{index}}",
+    "validResourceQuantityRequired": "Please enter a valid quantity for resource {{index}}",
     "invalidInvitationLink": "Invalid invitation link",
     "invitationExpiredOrInvalid": "This invitation has expired or is invalid",
     "errorValidatingInvitation": "Error validating invitation",
@@ -248,7 +268,81 @@
     "invitationCancelledSuccessfully": "Invitation cancelled successfully",
     "errorCancellingInvitation": "Error cancelling invitation",
     "canOnlyCancelPendingInvitations": "You can only cancel pending invitations",
-    "confirmCancelInvitation": "Are you sure you want to cancel this invitation?"
+    "confirmCancelInvitation": "Are you sure you want to cancel this invitation?",
+    "serviceCreatedSuccessfully": "Service created successfully",
+    "serviceUpdatedSuccessfully": "Service updated successfully", 
+    "errorSavingService": "Error saving service",
+    "errorLoadingServices": "Error loading services",
+    "serviceNameRequired": "Service name is required",
+    "locationRequired": "Please select a location",
+    "validCostRequired": "Please enter a valid cost",
+    "validDurationRequired": "Please enter a valid duration in days",
+    "validMaxEntriesRequired": "Please enter a valid number of entries for package services"
+  },
+  "services": {
+    "title": "Services",
+    "manageServices": "Manage services offered to your customers",
+    "addService": "Add Service",
+    "editService": "Edit Service",
+    "addFirstService": "Add First Service",
+    "service": "Service",
+    "serviceName": "Service Name",
+    "description": "Description",
+    "type": "Type",
+    "location": "Location",
+    "quantity": "Quantity",
+    "cost": "Cost",
+    "currency": "Currency",
+    "duration": "Duration",
+    "durationDays": "Duration (Days)",
+    "maxEntries": "Max Entries",
+    "status": "Status",
+    "actions": "Actions",
+    "available": "available",
+    "lowStock": "Low Stock",
+    "alertThreshold": "Alert Threshold",
+    "totalServices": "Total Services",
+    "activeServices": "Active Services",
+    "subscriptions": "Subscriptions",
+    "packages": "Packages",
+    "days": "days",
+    "free": "Free",
+    "noLocation": "No Location",
+    "noServicesFound": "No services found. Add your first service to get started.",
+    "noLocationsAvailable": "No locations available",
+    "selectLocation": "Select a location",
+    "accessDenied": "Access Denied",
+    "accessDeniedMessage": "Only partner administrators can manage services.",
+    
+    "subscription": "Subscription",
+    "package": "Package", 
+    "freeTrial": "Free Trial",
+    "active": "Active",
+    "inactive": "Inactive",
+    "draft": "Draft",
+    
+    "basicInformation": "Basic Information",
+    "pricingAndDuration": "Pricing & Duration",
+    "quantityAndAvailability": "Quantity & Availability",
+    "advancedSettings": "Advanced Settings",
+    "quantityHelp": "How many units of this service are available (e.g., desks, meeting rooms, parking spots)",
+    "alertThresholdHelp": "Get notified when available quantity falls below this number",
+    "quantityExamples": "Examples",
+    "exampleDesks": "Hot Desks",
+    "exampleDesksDesc": "If you have 20 hot desks available, set quantity to 20",
+    "exampleMeetingRooms": "Meeting Rooms",
+    "exampleMeetingRoomsDesc": "If you have 3 meeting rooms, set quantity to 3",
+    "exampleParkingSpots": "Parking Spots",
+    "exampleParkingSpotsDesc": "If you have 10 parking spots, set quantity to 10",
+    "gracePeriodDays": "Grace Period (Days)",
+    "gracePeriodHelp": "Number of days customers can continue using the service after expiration",
+    "isRenewable": "Service is renewable",
+    "renewableHelp": "Allow customers to renew this service when it expires",
+    "autoRenew": "Auto-renew by default",
+    "autoRenewHelp": "Automatically renew this service unless customer opts out",
+    
+    "freeTrialNote": "Free Trial",
+    "freeTrialDescription": "Free trial services have no cost and are typically used to attract new customers"
   },
   "placeholders": {
     "emailPlaceholder": "Email address",
@@ -275,7 +369,11 @@
     "billingZipPlaceholder": "Billing ZIP code",
     "billingCityPlaceholder": "Billing city",
     "billingCountryPlaceholder": "Billing country",
-    "notesPlaceholder": "Additional notes or comments"
+    "notesPlaceholder": "Additional notes or comments",
+    "serviceNamePlaceholder": "Enter service name",
+    "serviceDescriptionPlaceholder": "Describe what this service includes...",
+    "resourceNamePlaceholder": "e.g., Hot Desks, Small Meeting Room",
+    "resourceDescriptionPlaceholder": "Describe this resource type..."
   },
   "app": {
     "appName": "Coworking Management",
