--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -2,6 +2,7 @@
   "navigation": {
     "dashboard": "Dashboard",
     "partners": "Partner",
+    "services": "Servizi",
     "users": "Utenti",
     "invitations": "Inviti",
     "customers": "Clienti",
@@ -79,7 +80,22 @@
     "locationsFor": "Sedi per",
     "noLocationsFound": "Nessuna sede trovata per questo partner",
     "addFirstLocation": "Aggiungi Prima Sede",
-    "viewLocations": "Visualizza Sedi"
+    "viewLocations": "Visualizza Sedi",
+    "basicInformation": "Informazioni Base",
+    "availableResources": "Risorse Disponibili",
+    "addResource": "Aggiungi Risorsa",
+    "resourceType": "Tipo Risorsa",
+    "resourceName": "Nome Risorsa",
+    "quantity": "Quantità",
+    "description": "Descrizione",
+    "scrivania": "Scrivania",
+    "salaRiunioni": "Sala Riunioni",
+    "available": "disponibili",
+    "totalResources": "Risorse Totali",
+    "noResourcesFound": "Nessuna risorsa definita per questa sede",
+    "resourceExamples": "Esempi di Risorse",
+    "scrivaniaSexamples": "Scrivanie Condivise, Scrivanie Dedicate, Uffici Privati",
+    "salaRiunioniExamples": "Sala Riunioni Piccola, Sala Conferenze, Cabina Telefonica"
   },
   "auth": {
     "signIn": "Accedi",
@@ -236,7 +252,11 @@
     "locationDeletedSuccessfully": "Sede eliminata con successo",
     "errorSavingLocation": "Errore nel salvataggio della sede",
     "errorDeletingLocation": "Errore nell'eliminazione della sede",
+    "errorLoadingLocations": "Errore nel caricamento delle sedi",
     "confirmDeleteLocation": "Sei sicuro di voler eliminare questa sede?",
+    "locationNameRequired": "Il nome della sede è obbligatorio",
+    "resourceNameRequired": "Il nome della risorsa è obbligatorio per la risorsa {{index}}",
+    "validResourceQuantityRequired": "Inserisci una quantità valida per la risorsa {{index}}",
     "invalidInvitationLink": "Link di invito non valido",
     "invitationExpiredOrInvalid": "Questo invito è scaduto o non è valido",
     "errorValidatingInvitation": "Errore nella validazione dell'invito",
@@ -248,7 +268,82 @@
     "invitationCancelledSuccessfully": "Invito annullato con successo",
     "errorCancellingInvitation": "Errore nell'annullamento dell'invito",
     "canOnlyCancelPendingInvitations": "Puoi annullare solo gli inviti in attesa",
-    "confirmCancelInvitation": "Sei sicuro di voler annullare questo invito?"
+    "confirmCancelInvitation": "Sei sicuro di voler annullare questo invito?",
+    "serviceCreatedSuccessfully": "Servizio creato con successo",
+    "serviceUpdatedSuccessfully": "Servizio aggiornato con successo",
+    "errorSavingService": "Errore nel salvataggio del servizio", 
+    "errorLoadingServices": "Errore nel caricamento dei servizi",
+    "serviceNameRequired": "Il nome del servizio è obbligatorio",
+    "locationRequired": "Seleziona una sede",
+    "validCostRequired": "Inserisci un costo valido",
+    "validDurationRequired": "Inserisci una durata valida in giorni",
+    "validQuantityRequired": "Inserisci una quantità valida (minimo 1)",
+    "validMaxEntriesRequired": "Inserisci un numero valido di ingressi per i servizi pacchetto"
+  },
+  "services": {
+    "title": "Servizi",
+    "manageServices": "Gestisci i servizi offerti ai tuoi clienti",
+    "addService": "Aggiungi Servizio",
+    "editService": "Modifica Servizio", 
+    "addFirstService": "Aggiungi Primo Servizio",
+    "service": "Servizio",
+    "serviceName": "Nome Servizio",
+    "description": "Descrizione",
+    "type": "Tipo",
+    "location": "Sede",
+    "quantity": "Quantità",
+    "cost": "Costo",
+    "currency": "Valuta",
+    "duration": "Durata",
+    "durationDays": "Durata (Giorni)",
+    "maxEntries": "Ingressi Massimi",
+    "status": "Stato",
+    "actions": "Azioni",
+    "available": "disponibili",
+    "lowStock": "Scorte Basse",
+    "alertThreshold": "Soglia Avviso",
+    "totalServices": "Totale Servizi",
+    "activeServices": "Servizi Attivi",
+    "subscriptions": "Abbonamenti",
+    "packages": "Pacchetti",
+    "days": "giorni",
+    "free": "Gratuito",
+    "noLocation": "Nessuna Sede",
+    "noServicesFound": "Nessun servizio trovato. Aggiungi il tuo primo servizio per iniziare.",
+    "noLocationsAvailable": "Nessuna sede disponibile",
+    "selectLocation": "Seleziona una sede",
+    "accessDenied": "Accesso Negato",
+    "accessDeniedMessage": "Solo gli amministratori partner possono gestire i servizi.",
+    
+    "subscription": "Abbonamento",
+    "package": "Pacchetto",
+    "freeTrial": "Prova Gratuita",
+    "active": "Attivo",
+    "inactive": "Inattivo", 
+    "draft": "Bozza",
+    
+    "basicInformation": "Informazioni Base",
+    "pricingAndDuration": "Prezzo e Durata",
+    "quantityAndAvailability": "Quantità e Disponibilità",
+    "advancedSettings": "Impostazioni Avanzate",
+    "quantityHelp": "Quante unità di questo servizio sono disponibili (es. scrivanie, sale riunioni, posti auto)",
+    "alertThresholdHelp": "Ricevi una notifica quando la quantità disponibile scende sotto questo numero",
+    "quantityExamples": "Esempi",
+    "exampleDesks": "Scrivanie Condivise",
+    "exampleDesksDesc": "Se hai 20 scrivanie condivise disponibili, imposta la quantità a 20",
+    "exampleMeetingRooms": "Sale Riunioni",
+    "exampleMeetingRoomsDesc": "Se hai 3 sale riunioni, imposta la quantità a 3",
+    "exampleParkingSpots": "Posti Auto",
+    "exampleParkingSpotsDesc": "Se hai 10 posti auto, imposta la quantità a 10",
+    "gracePeriodDays": "Periodo di Grazia (Giorni)",
+    "gracePeriodHelp": "Numero di giorni in cui i clienti possono continuare a usare il servizio dopo la scadenza",
+    "isRenewable": "Il servizio è rinnovabile",
+    "renewableHelp": "Permetti ai clienti di rinnovare questo servizio quando scade",
+    "autoRenew": "Rinnovo automatico di default",
+    "autoRenewHelp": "Rinnova automaticamente questo servizio a meno che il cliente non rinunci",
+    
+    "freeTrialNote": "Prova Gratuita",
+    "freeTrialDescription": "I servizi di prova gratuita non hanno costi e sono tipicamente usati per attirare nuovi clienti"
   },
   "placeholders": {
     "emailPlaceholder": "Indirizzo email",
@@ -268,6 +363,8 @@
     "sdiCodePlaceholder": "Codice SDI per fatturazione elettronica",
     "websitePlaceholder": "https://esempio.it",
     "locationNamePlaceholder": "Inserisci nome sede",
+    "resourceNamePlaceholder": "es. Scrivanie Condivise, Sala Riunioni Piccola",
+    "resourceDescriptionPlaceholder": "Descrivi questo tipo di risorsa...",
     "customMessagePlaceholder": "Aggiungi un messaggio personale all'invito (opzionale)",
     "billingEmailPlaceholder": "Email fatturazione",
     "billingPhonePlaceholder": "Telefono fatturazione",
@@ -275,7 +372,9 @@
     "billingZipPlaceholder": "CAP fatturazione",
     "billingCityPlaceholder": "Città fatturazione",
     "billingCountryPlaceholder": "Paese fatturazione",
-    "notesPlaceholder": "Note aggiuntive o commenti"
+    "notesPlaceholder": "Note aggiuntive o commenti",
+    "serviceNamePlaceholder": "Inserisci nome servizio",
+    "serviceDescriptionPlaceholder": "Descrivi cosa include questo servizio..."
   },
   "app": {
     "appName": "Gestione Coworking",
