--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -13,7 +13,8 @@
     "partnerMember": "Partner Member",
     "systemAdmin": "System Administrator",
     "partnerAdmin": "Partner Administrator",
-    "member": "Member"
+    "member": "Member",
+    "contracts": "Contracts"
   },
   "customers": {
     "title": "Customers",
@@ -278,7 +279,15 @@
     "validCostRequired": "Please enter a valid cost",
     "validDurationRequired": "Please enter a valid duration in days",
     "validMaxEntriesRequired": "Please enter a valid number of entries for package services",
-    "resourceRequired": "Please select a resource for this service"
+    "resourceRequired": "Please select a resource for this service",
+    "errorLoadingContracts": "Error loading contracts",
+    "contractCreatedSuccessfully": "Contract created successfully",
+    "errorCreatingContract": "Error creating contract",
+    "customerRequired": "Please select a customer",
+    "locationRequired": "Please select a location",
+    "serviceRequired": "Please select a service",
+    "startDateRequired": "Please select a start date",
+    "startDateCannotBeInPast": "Start date cannot be in the past"
   },
   "services": {
     "title": "Services",
@@ -351,6 +360,59 @@
     "selectResource": "Select a resource",
     "noResourcesAvailable": "No resources available for this location",
     "availableQuantity": "Available quantity"
+  },
+  "contracts": {
+    "title": "Contracts",
+    "manageYourContracts": "View and manage your active service contracts",
+    "managePartnerContracts": "Manage contracts for your partner customers",
+    "createContract": "Create Contract",
+    "createFirstContract": "Create First Contract",
+    "viewContract": "View Contract",
+    "editContract": "Edit Contract",
+    "contract": "Contract",
+    "contractNumber": "Contract Number",
+    "customer": "Customer",
+    "service": "Service",
+    "location": "Location",
+    "resource": "Resource",
+    "period": "Period",
+    "cost": "Cost",
+    "status": "Status",
+    "actions": "Actions",
+    "startDate": "Start Date",
+    "endDate": "End Date",
+    "duration": "Duration",
+    "days": "days",
+    "daysRemaining": "days remaining",
+    "expired": "Expired",
+    "entriesUsed": "entries used",
+    "includedEntries": "Included Entries",
+    "totalContracts": "Total Contracts",
+    "activeContracts": "Active Contracts",
+    "expiredContracts": "Expired Contracts",
+    "noContractsFound": "No contracts found. Create your first contract to get started.",
+    
+    "selectCustomer": "Select Customer",
+    "selectLocation": "Select Location",
+    "selectLocationFirst": "Select a location first",
+    "selectService": "Select Service",
+    "selectStartDate": "Select Start Date",
+    "serviceDetails": "Service Details",
+    "description": "Description",
+    "endDateCalculated": "End date is automatically calculated based on service duration",
+    "reviewContract": "Review Contract",
+    
+    "confirmContract": "Confirm Contract",
+    "importantNotice": "Important Notice",
+    "contractImmutableWarning": "Once created, contracts cannot be modified. Please review all details carefully before confirming.",
+    "contractSummary": "Contract Summary",
+    "confirmAndCreate": "Confirm & Create Contract",
+    "creating": "Creating",
+    
+    "active": "Active",
+    "expired": "Expired",
+    "cancelled": "Cancelled",
+    "suspended": "Suspended"
   },
   "placeholders": {
     "emailPlaceholder": "Email address",
