--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -13,7 +13,8 @@
     "partnerMember": "Membro Partner",
     "systemAdmin": "Amministratore di Sistema",
     "partnerAdmin": "Amministratore Partner",
-    "member": "Membro"
+    "member": "Membro",
+    "contracts": "Contratti"
   },
   "customers": {
     "title": "Clienti",
@@ -279,7 +280,15 @@
     "validDurationRequired": "Inserisci una durata valida in giorni",
     "validQuantityRequired": "Inserisci una quantità valida (minimo 1)",
     "validMaxEntriesRequired": "Inserisci un numero valido di ingressi per i servizi pacchetto",
-    "resourceRequired": "Seleziona una risorsa per questo servizio"
+    "resourceRequired": "Seleziona una risorsa per questo servizio",
+    "errorLoadingContracts": "Errore nel caricamento dei contratti",
+    "contractCreatedSuccessfully": "Contratto creato con successo",
+    "errorCreatingContract": "Errore nella creazione del contratto",
+    "customerRequired": "Seleziona un cliente",
+    "locationRequired": "Seleziona una sede",
+    "serviceRequired": "Seleziona un servizio",
+    "startDateRequired": "Seleziona una data di inizio",
+    "startDateCannotBeInPast": "La data di inizio non può essere nel passato"
   },
   "services": {
     "title": "Servizi",
@@ -352,6 +361,59 @@
     "selectResource": "Seleziona una risorsa",
     "noResourcesAvailable": "Nessuna risorsa disponibile per questa sede",
     "availableQuantity": "Quantità disponibile"
+  },
+  "contracts": {
+    "title": "Contratti",
+    "manageYourContracts": "Visualizza e gestisci i tuoi contratti di servizio attivi",
+    "managePartnerContracts": "Gestisci i contratti per i clienti del tuo partner",
+    "createContract": "Crea Contratto",
+    "createFirstContract": "Crea Primo Contratto",
+    "viewContract": "Visualizza Contratto",
+    "editContract": "Modifica Contratto",
+    "contract": "Contratto",
+    "contractNumber": "Numero Contratto",
+    "customer": "Cliente",
+    "service": "Servizio",
+    "location": "Sede",
+    "resource": "Risorsa",
+    "period": "Periodo",
+    "cost": "Costo",
+    "status": "Stato",
+    "actions": "Azioni",
+    "startDate": "Data Inizio",
+    "endDate": "Data Fine",
+    "duration": "Durata",
+    "days": "giorni",
+    "daysRemaining": "giorni rimanenti",
+    "expired": "Scaduto",
+    "entriesUsed": "ingressi utilizzati",
+    "includedEntries": "Ingressi Inclusi",
+    "totalContracts": "Contratti Totali",
+    "activeContracts": "Contratti Attivi",
+    "expiredContracts": "Contratti Scaduti",
+    "noContractsFound": "Nessun contratto trovato. Crea il tuo primo contratto per iniziare.",
+    
+    "selectCustomer": "Seleziona Cliente",
+    "selectLocation": "Seleziona Sede",
+    "selectLocationFirst": "Seleziona prima una sede",
+    "selectService": "Seleziona Servizio",
+    "selectStartDate": "Seleziona Data Inizio",
+    "serviceDetails": "Dettagli Servizio",
+    "description": "Descrizione",
+    "endDateCalculated": "La data di fine viene calcolata automaticamente in base alla durata del servizio",
+    "reviewContract": "Rivedi Contratto",
+    
+    "confirmContract": "Conferma Contratto",
+    "importantNotice": "Avviso Importante",
+    "contractImmutableWarning": "Una volta creati, i contratti non possono essere modificati. Ti preghiamo di rivedere attentamente tutti i dettagli prima di confermare.",
+    "contractSummary": "Riepilogo Contratto",
+    "confirmAndCreate": "Conferma e Crea Contratto",
+    "creating": "Creazione",
+    
+    "active": "Attivo",
+    "expired": "Scaduto",
+    "cancelled": "Annullato",
+    "suspended": "Sospeso"
   },
   "placeholders": {
     "emailPlaceholder": "Indirizzo email",
