--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -364,6 +364,37 @@
     "noResourcesAvailable": "No resources available for this location",
     "availableQuantity": "Available quantity"
   },
+  "reservations": {
+    "title": "Package Reservations",
+    "bookReservation": "Book Reservation",
+    "reservationDate": "Reservation Date",
+    "duration": "Duration",
+    "fullDay": "Full Day",
+    "halfDay": "Half Day",
+    "morning": "Morning",
+    "afternoon": "Afternoon",
+    "timeSlot": "Time Slot",
+    "entriesUsed": "Entries Used",
+    "entriesRemaining": "entries remaining",
+    "availabilityCheck": "Availability Check",
+    "resourceAvailable": "Available",
+    "resourceNotAvailable": "Not Available",
+    "checkingAvailability": "Checking availability",
+    "bookingConfirmed": "Reservation confirmed successfully",
+    "confirmReservation": "Confirm Reservation",
+    "bookingDetails": "Booking Details",
+    "contractDetails": "Contract Details",
+    "reservationDetails": "Reservation Details",
+    "bookingSummary": "Booking Summary",
+    "dateLabel": "Date",
+    "durationLabel": "Duration",
+    "entriesToUse": "Entries to use",
+    "remainingAfter": "Remaining after",
+    "morningSlot": "Morning (9:00-13:00)",
+    "afternoonSlot": "Afternoon (14:00-18:00)",
+    "fullDayEntry": "Full Day (1 entry)",
+    "halfDayEntry": "Half Day (0.5 entries)"
+  },
   "contracts": {
     "title": "Contracts",
     "manageYourContracts": "View and manage your active service contracts",
