--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -365,6 +365,37 @@
     "noResourcesAvailable": "Nessuna risorsa disponibile per questa sede",
     "availableQuantity": "Quantità disponibile"
   },
+  "reservations": {
+    "title": "Prenotazioni Pacchetto",
+    "bookReservation": "Prenota",
+    "reservationDate": "Data Prenotazione",
+    "duration": "Durata",
+    "fullDay": "Giornata Intera",
+    "halfDay": "Mezza Giornata",
+    "morning": "Mattino",
+    "afternoon": "Pomeriggio",
+    "timeSlot": "Fascia Oraria",
+    "entriesUsed": "Ingressi Utilizzati",
+    "entriesRemaining": "ingressi rimanenti",
+    "availabilityCheck": "Controllo Disponibilità",
+    "resourceAvailable": "Disponibile",
+    "resourceNotAvailable": "Non Disponibile",
+    "checkingAvailability": "Controllo disponibilità",
+    "bookingConfirmed": "Prenotazione confermata con successo",
+    "confirmReservation": "Conferma Prenotazione",
+    "bookingDetails": "Dettagli Prenotazione",
+    "contractDetails": "Dettagli Contratto",
+    "reservationDetails": "Dettagli Prenotazione",
+    "bookingSummary": "Riepilogo Prenotazione",
+    "dateLabel": "Data",
+    "durationLabel": "Durata",
+    "entriesToUse": "Ingressi da utilizzare",
+    "remainingAfter": "Rimanenti dopo",
+    "morningSlot": "Mattino (9:00-13:00)",
+    "afternoonSlot": "Pomeriggio (14:00-18:00)",
+    "fullDayEntry": "Giornata Intera (1 ingresso)",
+    "halfDayEntry": "Mezza Giornata (0.5 ingressi)"
+  },
   "contracts": {
     "title": "Contratti",
     "manageYourContracts": "Visualizza e gestisci i tuoi contratti di servizio attivi",
